# PCF-compiler-and-intreperter

./: dune-project  pcf.opam
.github/workflows/: test.yml
_build/: log
_build/default/: pcf.dune-package  pcf.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: eval.ml  pcf.cma  pcf.cmxa  pcf.cmxs  pcf.ml-gen
_build/default/lib/.merlin-conf/: lib-pcf
_build/default/lib/.pcf.objs/: pcf__Eval.impl.all-deps  pcf__Eval.impl.d  pcf__Pp_term.impl.d  pcf__Term.impl.d
_build/default/lib/.pcf.objs/byte/: pcf.cmi  pcf.cmo  pcf.cmt  pcf__Eval.cmi  pcf__Eval.cmo  pcf__Eval.cmt  pcf__Pp_term.cmi  pcf__Pp_term.cmo  pcf__Pp_term.cmt  pcf__Term.cmi  pcf__Term.cmo  pcf__Term.cmt
_build/default/lib/.pcf.objs/native/: pcf.cmx  pcf__Eval.cmx  pcf__Pp_term.cmx  pcf__Term.cmx
_build/default/test/.merlin-conf/: exe-test_eval  exe-test_pcf  exe-test_pp
_build/default/test/.test_eval.eobjs/: dune__exe__Test_eval.impl.d  dune__exe__Test_eval.intf.d
_build/default/test/.test_eval.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Test_eval.cmi  dune__exe__Test_eval.cmti
_build/default/test/.test_eval.eobjs/native/: dune__exe.cmx  (+1 more)
_build/default/test/.test_pcf.eobjs/: dune__exe__Test_pcf.impl.d  dune__exe__Test_pcf.intf.d
_build/default/test/.test_pp.eobjs/: dune__exe.ml-gen  dune__exe__Test_pp.impl.d  dune__exe__Test_pp.intf.d
lib/: db_interp.ml  db_term.ml  dune  eval.ml  interp.ml  pp_term.ml  term.ml  trans.ml
test/: dune  test_db_interp.ml  test_eval.ml  test_interp.ml  test_pp.ml  test_suite.ml
(+17 files in other folders)
